--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -168,8 +168,64 @@
 	<string name="done">Done</string>
 	<string name="default_entry">Default entry</string>
 	<string name="timeout_secs">Timeout (seconds)</string>
-	<string name="failed2save">Failed to save changes...</string>
+	<string name="failed2save">Failed to save changes…</string>
 	<string name="save_changes">Save changes</string>
 	<string name="update_droidboot">Update DroidBoot</string>
 	<string name="noob_mode">Simplified mode</string>
+	<string name="dl_error">Error downloading file :(</string>
+	<string name="error">Error</string>
+	<string name="setup_sd">Setup SD card</string>
+	<string name="repair_droidboot">Repair DroidBoot</string>
+	<string name="repair_cfg">Repair bootset</string>
+	<string name="cannot_delete">Cannot delete %s</string>
+	<string name="malformed_dbcfg">Malformed db.conf - recreating</string>
+	<string name="install_canceled">The installation was canceled. Nothing has been changed.</string>
+	<string name="term_failure">--- Failure ---</string>
+	<string name="dev_details">Details for developers:</string>
+	<string name="term_starting">-- Starting…</string>
+	<string name="term_cant_umount">Cannot umount. Nothing has been changed</string>
+	<string name="term_invalid_action">Invalid action, nothing has been changed</string>
+	<string name="term_success">-- Successful!</string>
+	<string name="term_contact_support">-- Please contact support</string>
+	<string name="term_backup_restore_fail">-- Failed to backup/restore, cause:</string>
+	<string name="term_flashing_droidboot">Flashing DroidBoot…</string>
+	<string name="term_cant_write_bl">Note: probably cannot write to bootloader</string>
+	<string name="term_bl_failed">-- Failed to flash bootloader, cause:</string>
+	<string name="term_consult_doc">-- Please consult documentation to finish the install.</string>
+	<string name="term_preparing_fs">Preparing file system…</string>
+	<string name="term_mount_state_bad">-- inconsistent mount state, aborting</string>
+	<string name="term_cant_create_abm_dir">-- failed to create /data/abm, aborting</string>
+	<string name="term_cant_create_mount_point">-- failed to create mount point, aborting</string>
+	<string name="term_cant_create_placeholder">-- failed to create placeholder, aborting</string>
+	<string name="term_cant_get_meta">-- failed to get meta, aborting</string>
+	<string name="term_failed_umount_drive">-- warning: failed to unmount drive</string>
+	<string name="term_failed_create_pt">-- failed to create partition table, aborting</string>
+	<string name="term_reboot_asap">-- Please reboot AS SOON AS POSSIBLE!!!</string>
+	<string name="term_done">-- Done.</string>
+	<string name="term_failed_create_meta">-- failed to create metadata partition.</string>
+	<string name="term_failed_mount">-- failed to mount, aborting</string>
+	<string name="term_mount_failure_inconsist">-- inconsistent mount failure, aborting</string>
+	<string name="term_failed_create_db_dir">-- failed to create db directory, aborting</string>
+	<string name="term_failed_create_entries_dir">-- failed to create entries directory, aborting</string>
+	<string name="term_building_cfg">Building configuration…</string>
+	<string name="term_device_setup">Device setup…</string>
+	<string name="term_dl_updated_bi">-- Downloading updated boot image…</string>
+	<string name="term_dl_fail1">Download failed, trying again…</string>
+	<string name="term_dl_fail2">Download failed, giving up.</string>
+	<string name="term_dling_part_image">Downloading updated partition image …</string>
+	<string name="term_simg2img_fail">simg2img returned failure</string>
+	<string name="term_patch_update">-- Patching update…</string>
+	<string name="term_script_fail">Script returned failure</string>
+	<string name="term_update_failed_prep">-- Failed to prepare update. Nothing has been changed.</string>
+	<string name="term_flashing_p">Flashing partition %s…</string>
+	<string name="term_f_name">-- Folder name: %s</string>
+	<string name="term_g_name">-- GUI name: %s</string>
+	<string name="term_creating_pt">-- Creating partition layout…</string>
+	<string name="term_mkdir_failed">-- FAILED to mkdir</string>
+	<string name="term_flashing_imgs">-- Flashing images…</string>
+	<string name="term_flashing_s">Flashing %s…</string>
+	<string name="term_patching_os">-- Patching operating system…</string>
+	<string name="term_create_part">Creating partition…</string>
+	<string name="term_created_part">Created partition.</string>
+	<string name="term_created_pt">-- Created partition layout.</string>
 </resources>
