--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
 	<string name="close_content_desc">Close</string>
 	<string name="expand_content_desc">Expand</string>
 	<string name="internal_id">ROM internal ID (don\'t touch if unsure)</string>
-	<string name="name_in_boot">ROM name in bootmenu</string>
+	<string name="name_in_boot">ROM name in boot menu</string>
 	<string name="part_layout">Partition layout (advanced users)</string>
 	<string name="os_userdata">OS userdata</string>
 	<string name="os_system">OS system data</string>
@@ -70,7 +70,8 @@
 	<string name="os_name">OS name</string>
 	<string name="invalid_in">Invalid input</string>
 	<string name="droidboot_icon_content_desc">DroidBoot Icon</string>
-	<string name="choose_droidboot_online">Please choose a DroidBoot image, or use the download button to automatically download the latest version from the internet (recommened for most users).</string>
+	<string name="choose_droidboot_online">Please choose a DroidBoot image, or use the download button to automatically download the latest version from the internet (recommended for most users).</string>
+	<string name="choose_install_s_online">Please choose an installer shell script, or use the download button to automatically download the latest version from the internet (recommended for most users).</string>
 	<string name="reinstall_dboot">This will reinstall DroidBoot</string>
 	<string name="file_unavailable">File not available, please try again later!</string>
 	<string name="internal_file_error1">Internal error - no file handler added!! Please cancel install</string>
