i love that this app has 4 different systems for downlaoding files and i even mix multiple in one install task

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -229,4 +229,5 @@
 	<string name="term_created_part">Created partition.</string>
 	<string name="term_created_pt">-- Created partition layout.</string>
 	<string name="shop_error">Failed loading list of ROMs from Open ROM Project</string>
+	<string name="installer_sh">Installer shell script</string>
 </resources>
