--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -230,4 +230,5 @@
 	<string name="term_created_pt">-- Created partition layout.</string>
 	<string name="shop_error">Failed loading list of ROMs from Open ROM Project</string>
 	<string name="installer_sh">Installer shell script</string>
+	<string name="themes">Themes</string>
 </resources>
