--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -259,4 +259,5 @@
 	<string name="service_notifications">Service notifications</string>
 	<string name="abm_processing_title">ABM is processing</string>
 	<string name="abm_processing_text">Please make sure you do not leave the app to avoid issues</string>
+	<string name="restoring_backup">Restoring backup…</string>
 </resources>
