migrate to new download system in legacy flows part3

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -260,4 +260,5 @@
 	<string name="restoring_backup">Restoring backup…</string>
 	<string name="bytes">bytes</string>
 	<string name="percent">percent</string>
+	<string name="how_many_extras">How many extra IDs?</string>
 </resources>
