--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -260,5 +260,5 @@
 	<string name="restoring_backup">Restoring backup…</string>
 	<string name="bytes">bytes</string>
 	<string name="percent">percent</string>
-	<string name="how_many_extras">How many extra IDs?</string>
+	<string name="how_many_extras">How many extra IDs? Currently: %d</string>
 </resources>
