--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -267,6 +267,7 @@
 	<string name="term_failed_uncrypt">-- failed to decrypt bootset.img</string>
 	<string name="term_failed_mapconv">-- failed to convert bootset.img map</string>
 	<string name="term_failed_map">-- failed to map bootset.img</string>
+	<string name="term_failed_bootset_mkfs">-- failed to create file system in bootset</string>
 	<string name="term_failed_unmap">-- failed to unmap bootset.img</string>
 	<string name="install_bl_first">You need to install the bootloader manually first. Please check the ABM wiki for more infos.</string>
 </resources>
